* Updated build xml file to work with tomcat 8 * Possible fix for unit tests not getting added sometimes. NOTE: I don't think this fixes the underlying issue, but it works as a quick band-aid

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
         <!--  * for Tomcat 5/6 use servlet-api.jar -->
         <!--  * for other app servers - check the docs -->
         <fileset dir="${appserver.lib}">
-            <include name="servlet*.jar"/>
+            <include name="*.jar"/>
         </fileset>
         <pathelement path="${build.dir}"/>
     </path>
@@ -91,7 +91,7 @@
         <!-- We need the Catalina jars for Tomcat -->
         <!--  * for other app servers - check the docs -->
         <fileset dir="${appserver.lib}">
-            <include name="catalina-ant.jar"/>
+            <include name="*.jar"/>
         </fileset>
     </path>
 
@@ -112,39 +112,38 @@
     </taskdef>
 
     <target name="install" description="Install application in Tomcat">
-        <install url="${tomcat.manager.url}"
-                 username="${tomcat.manager.username}"
-                 password="${tomcat.manager.password}"
-                 path="/${name}"
-                 war="${name}"/>
+    	<taskdef name="install" 
+	        classname="org.apache.catalina.ant.InstallTask">
+	        <classpath refid="catalina-ant-classpath"/>
+	    </taskdef>
     </target>
 
     <target name="reload" description="Reload application in Tomcat">
-        <reload url="${tomcat.manager.url}"
-                 username="${tomcat.manager.username}"
-                 password="${tomcat.manager.password}"
-                 path="/${name}"/>
+    	<taskdef name="reload" 
+	        classname="org.apache.catalina.ant.ReloadTask">
+	        <classpath refid="catalina-ant-classpath"/>
+	    </taskdef>
     </target>
 
     <target name="start" description="Start Tomcat application">
-        <start url="${tomcat.manager.url}"
-                 username="${tomcat.manager.username}"
-                 password="${tomcat.manager.password}"
-                 path="/${name}"/>
+    	<taskdef name="start" 
+	        classname="org.apache.catalina.ant.StartTask">
+	        <classpath refid="catalina-ant-classpath"/>
+	    </taskdef>
     </target>
-
+	
     <target name="stop" description="Stop Tomcat application">
-        <stop url="${tomcat.manager.url}"
-        		 failOnError="false"
-                 username="${tomcat.manager.username}"
-                 password="${tomcat.manager.password}"
-                 path="/${name}"/>
+    	<taskdef name="stop" 
+	         classname="org.apache.catalina.ant.StopTask">
+	        <classpath refid="catalina-ant-classpath"/>
+	    </taskdef>
     </target>
-
+	
     <target name="list" description="List Tomcat applications">
-        <list url="${tomcat.manager.url}"
-                 username="${tomcat.manager.username}"
-                 password="${tomcat.manager.password}"/>
+    	<taskdef name="list" 
+	        classname="org.apache.catalina.ant.ListTask">
+	        <classpath refid="catalina-ant-classpath"/>
+	    </taskdef>
     </target>
 	
 	<target name="buildtests" description="Compile test tree java files">
