--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -57,4 +57,10 @@
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
+	<jsp-config>
+	  <taglib>
+	    <taglib-uri>pastaTag</taglib-uri>
+	    <taglib-location>/WEB-INF/tags/pasta.tld</taglib-location>
+	  </taglib>
+	</jsp-config>
 </web-app>
