--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 # Ant properties for building the springapp
 appserver.home=${user.home}/apache-tomcat-8.0.9
 
+webapp.name=PASTA
+
 # for Tomcat 5 use $appserver.home}/server/lib
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/lib
