--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 
 <project name="PASTA" basedir="." default="usage">
-    <property file="build.properties"/>
+	<property file="build.properties"/>
 
     <property name="src.dir" value="src"/>
     <property name="web.dir" value="war"/>
     <property name="build.dir" value="${web.dir}/WEB-INF/classes"/>
-    <property name="name" value="PASTA"/>
+    <property name="name" value="${webapp.name}"/>
 	<property name="test.dir" value="test"/>
 
     <path id="master-classpath">
