Added authentication settings to the database.

--- a/war/WEB-INF/classes/project.properties
+++ b/war/WEB-INF/classes/project.properties
@@ -1,3 +1,4 @@
+project.name=PASTA alfredo
 project.proxydomain=web-cache.usyd.edu.au
 project.proxyport=8080
 project.location=/home/tomcat/content/
