--- a/.classpath
+++ b/.classpath
@@ -1,59 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/ant-junit.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/ant-junit4.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/ant-launcher.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/ant.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/com.springsource.javax.servlet.jsp.jstl-1.2.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/com.springsource.org.apache.taglibs.standard-1.1.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/imap.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/javassist-3.13.0-GA.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/junit-4.8.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/lucene-analyzers-2.9.3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/lucene-core-2.9.3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/lucene-snowball-2.9.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-3.1.14-bin.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-3.8-20120326.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/sitemesh-2.4.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/slf4j-api-1.5.7.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/slf4j-log4j12-1.5.7.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/solr-core-1.4.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/solr-solrj-1.4.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/tools.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/validation-api-1.0.0.GA.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/xml-apis-1.0.b2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-validator-4.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-net-3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/unboundid-ldapsdk-se.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-aop-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-beans-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-context-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-context-support-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-core-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-expression-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-jdbc-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-orm-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-test-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-tx-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-web-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-webmvc-3.2.13.RELEASE.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections4-4.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar" sourcepath="/home/josh/git/ext_sources/commons-io-2.4-src.zip"/>
+	<classpathentry kind="lib" path="/opt/tomcat/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/opt/tomcat/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
