* Added black box test options, including detailed error messages on/off, and GCC compiler arguments  * Added "accessory files" to unit tests, which are copied to both the black box and custom JUnit tests.  * Added test meta information. Custom tests can access execution runtime, memory usage and exit code  * Added several debug messages for following execution of unit tests  * Changed timeouts to work using unix timout command, to ensure timeout processes actually end  * Added timeout and segfault detection for custom/black box tests  * Fixes C compile errors not being extracted correctly  * Fixes extra "empty test" fail message when none of the black box tests are to be compared.  * Fixes tests ending with "Test.java" not automatically being selected as main class when uploading custom unit tests  * Fixes incompatible java version errors when compiling custom validators (updating tools.jar for compatibility with Java 1.8)

--- a/war/WEB-INF/template_content/build_templates/PASTABlackBoxTest.template
+++ b/war/WEB-INF/template_content/build_templates/PASTABlackBoxTest.template
@@ -8,6 +8,8 @@ import java.util.Scanner;
 import java.util.ArrayList;
 
 public class PASTABlackBoxTest extends PASTAJUnitTest {
+${variables}
+
 ${tests}
 
     private void compareOutput(String testName, File expectedFile, File actualFile) {
@@ -38,20 +40,34 @@ ${tests}
 
         int e = expectedLines.size();
         int a = actualLines.size();
-        boolean plural = Math.abs(a - e) > 1;
-        if(e > a) {
-            String message = "Missing " + (e - a) + " line" + (plural ? "s" : "") + " of output.";
-            fail(message);
-        } else if(a > e) {
-            String message = "You produced " + (a - e) + " line" + (plural ? "s" : "") + " of extra output.";
-            fail(message);
+        if(e != a) {
+        	if(detailedErrors) {
+        		boolean plural = Math.abs(a - e) > 1;
+		        if(e > a) {
+		            String message = "Missing " + (e - a) + " line" + (plural ? "s" : "") + " of output.";
+		            fail(message);
+		        } else if(a > e) {
+		            String message = "You produced " + (a - e) + " line" + (plural ? "s" : "") + " of extra output.";
+		            fail(message);
+		        }
+        	} else {
+        		String message = "Incorrect output produced";
+            	fail(message);
+        	}
         }
 
         for(int i = 0; i < e; i++) {
-            String message = "Line " + (i + 1) + " incorrect;";
             String expected = expectedLines.get(i);
             String actual = actualLines.get(i);
-            assertEquals(message, expected, actual);
+            if(detailedErrors) {
+            	String message = "Line " + (i + 1) + " incorrect;";
+            	assertEquals(message, expected, actual);
+            } else {
+            	if(!expected.equals(actual)) {
+            		String message = "Incorrect output produced";
+            		fail(message);
+            	}
+            }
         }
     }
 }
