--- a/war/WEB-INF/template_content/build_templates/PASTABlackBoxTestMethod.template
+++ b/war/WEB-INF/template_content/build_templates/PASTABlackBoxTestMethod.template
@@ -1,7 +1,15 @@
     @Test (timeout=${timeout})
     public void ${testName}() {
-        File expectedFile = new File("bbexpected/${testName}");
-        File actualFile = new File("userout/${testName}");
+        File timeoutFile = new File("${timeoutDir}/${testName}.timedout");
+        if(timeoutFile.exists()) {
+        	fail("Test timed out after ${timeout} ms");
+        }
+        File segFaultFile = new File("${timeoutDir}/${testName}.segfault");
+        if(segFaultFile.exists()) {
+        	fail("Test resulted in a segmentation fault (the monitored command dumped core)");
+        }
+        File expectedFile = new File("${expectedDir}/${testName}");
+        File actualFile = new File("${actualDir}/${testName}");
         String testName = "${testName}";
         compareOutput(testName, expectedFile, actualFile);
     }
