--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -64,6 +64,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+        <listener-class>pasta.servlet.listener.ContextFinalizer</listener-class>
+    </listener>
 	
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
