--- a/pom.xml
+++ b/pom.xml
@@ -243,5 +243,15 @@
 		<artifactId>poi</artifactId>
 		<version>3.12</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-pool2</artifactId>
+		<version>2.4.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-dbcp2</artifactId>
+		<version>2.1.1</version>
+	</dependency>
   </dependencies>
 </project>
