--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,9 @@
     <property name="name" value="${webapp.name}"/>
 	<property name="test.dir" value="test"/>
 
+	<path id="maven-ant-tasks.classpath" path="lib/maven-ant-tasks-2.1.3.jar" />
+	<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
+
     <path id="master-classpath">
         <fileset dir="${web.dir}/WEB-INF/lib">
             <include name="*.jar"/>
