--- a/pom.xml
+++ b/pom.xml
@@ -253,5 +253,10 @@
 		<artifactId>commons-dbcp2</artifactId>
 		<version>2.1.1</version>
 	</dependency>
+	<dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+	    <version>2.6</version>
+	</dependency>
   </dependencies>
 </project>
