--- a/pom.xml
+++ b/pom.xml
@@ -258,5 +258,10 @@
 	    <artifactId>commons-lang</artifactId>
 	    <version>2.6</version>
 	</dependency>
+	<dependency>
+		<groupId>com.github.docker-java</groupId>
+		<artifactId>docker-java</artifactId>
+		<version>3.0.6</version>
+	</dependency>
   </dependencies>
 </project>
