--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -1,6 +1,14 @@
-languages=java
+languages=java,matlab
 
 java.name=Java
 java.extensions=java
 java.docker-build=java-exec/Dockerfile
 java.build-template=black_box_java_template.xml
+java.runner-class=pasta.testing.JavaBlackBoxTestRunner
+
+matlab.name=MATLAB
+matlab.extensions=m
+matlab.docker-build=matlab-exec/Dockerfile
+matlab.extra-build-files=/usr/local/MATLAB/
+matlab.build-template=black_box_matlab_template.xml
+matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
