--- a/war/WEB-INF/template_content/docker/java-exec/Dockerfile
+++ b/war/WEB-INF/template_content/docker/java-exec/Dockerfile
@@ -2,11 +2,15 @@ FROM openjdk:8-jdk
 
 RUN apt-get update && apt-get install -y --no-install-recommends ant ant-optional time coreutils
 
-RUN mkdir /sandbox/
-WORKDIR /sandbox/
+ARG workDir
+
+RUN mkdir ${workDir}/
+WORKDIR ${workDir}/
 
 RUN useradd -c 'PASTA Sandbox User' -M -s /bin/bash -u 1001 pastasandbox
 
-COPY bin/ /pasta/bin/
-RUN chmod 750 /pasta/bin/
-RUN chmod 4750 /pasta/bin/pastarun
+ARG binDir
+
+COPY bin/ ${binDir}/
+RUN chmod 750 ${binDir}/
+RUN chmod 4750 ${binDir}/pastarun
