Added ability to set specific hardware address for docker container (needed for local MATLAB licence).

--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -12,3 +12,4 @@ matlab.docker-build=matlab-exec/Dockerfile
 matlab.extra-build-files=/usr/local/MATLAB/
 matlab.build-template=black_box_matlab_template.xml
 matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
+matlab.hardware-address=
