--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -13,3 +13,4 @@ matlab.extra-build-files=/usr/local/MATLAB/
 matlab.build-template=black_box_matlab_template.xml
 matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
 matlab.hardware-address=
+matlab.exposed-ports=
