Added Python language support.

--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -1,4 +1,4 @@
-languages=java,matlab
+languages=java,matlab,python3
 
 java.name=Java
 java.extensions=java
@@ -14,3 +14,9 @@ matlab.build-template=black_box_matlab_template.xml
 matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
 matlab.hardware-address=
 matlab.exposed-ports=
+
+python3.name=Python 3
+python3.extensions=py
+python3.docker-build=python-exec/Dockerfile
+python3.build-template=black_box_python_template.xml
+python3.runner-class=pasta.testing.PythonBlackBoxTestRunner
