Added C language support.

--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -1,4 +1,4 @@
-languages=java,matlab,python3
+languages=java,matlab,python3,c
 
 java.name=Java
 java.extensions=java
@@ -20,3 +20,9 @@ python3.extensions=py
 python3.docker-build=python-exec/Dockerfile
 python3.build-template=black_box_python_template.xml
 python3.runner-class=pasta.testing.PythonBlackBoxTestRunner
+
+c.name=C
+c.extensions=c
+c.docker-build=c-exec/Dockerfile
+c.build-template=black_box_c_template.xml
+c.runner-class=pasta.testing.CBlackBoxTestRunner
