--- a/war/WEB-INF/classes/programs.properties
+++ b/war/WEB-INF/classes/programs.properties
@@ -9,3 +9,5 @@ python3=/usr/bin/python3
 matlab=/usr/local/MATLAB/R2016b/bin/matlab
 mcc=/usr/local/MATLAB/R2016b/bin/mcc
 matlab.install=/usr/local/MATLAB/R2016b/
+
+gcc=/usr/bin/gcc
