Added C++ language support.

--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -1,4 +1,4 @@
-languages=java,matlab,python3,c
+languages=java,matlab,python3,c,cpp
 
 java.name=Java
 java.extensions=java
@@ -12,7 +12,7 @@ matlab.docker-build=matlab-exec/Dockerfile
 matlab.extra-build-files=/usr/local/MATLAB/
 matlab.build-template=black_box_matlab_template.xml
 matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
-matlab.hardware-address=
+matlab.hardware-address=00:0c:29:92:b6:e8
 matlab.exposed-ports=
 
 python3.name=Python 3
@@ -26,3 +26,9 @@ c.extensions=c
 c.docker-build=c-exec/Dockerfile
 c.build-template=black_box_c_template.xml
 c.runner-class=pasta.testing.CBlackBoxTestRunner
+
+cpp.name=C++
+cpp.extensions=cpp,cc
+cpp.docker-build=cpp-exec/Dockerfile
+cpp.build-template=black_box_cpp_template.xml
+cpp.runner-class=pasta.testing.CPPBlackBoxTestRunner
