--- a/war/WEB-INF/classes/languages.properties
+++ b/war/WEB-INF/classes/languages.properties
@@ -12,7 +12,7 @@ matlab.docker-build=matlab-exec/Dockerfile
 matlab.extra-build-files=/usr/local/MATLAB/
 matlab.build-template=black_box_matlab_template.xml
 matlab.runner-class=pasta.testing.MatlabBlackBoxTestRunner
-matlab.hardware-address=00:0c:29:92:b6:e8
+matlab.hardware-address=
 matlab.exposed-ports=
 
 python3.name=Python 3
