Added several methods to PASTAJUnitTest class to make accessing student output and meta information easier.

--- a/war/WEB-INF/template_content/build_templates/PASTABlackBoxTestMethod.template
+++ b/war/WEB-INF/template_content/build_templates/PASTABlackBoxTestMethod.template
@@ -1,11 +1,9 @@
     @Test (timeout=${timeout})
     public void ${testName}() {
-        File timeoutFile = new File("${timeoutDir}/${testName}.timedout");
-        if(timeoutFile.exists()) {
+        if(testTimedOut("${testName}")) {
         	fail("Test timed out after ${timeout} ms");
         }
-        File segFaultFile = new File("${timeoutDir}/${testName}.segfault");
-        if(segFaultFile.exists()) {
+        if(testSegfaulted("${testName}")) {
         	fail("Test resulted in a segmentation fault (the monitored command dumped core)");
         }
         File expectedFile = new File("${expectedDir}/${testName}");
